%% title: ERD 05b1 - Approval Flow Definition / Approval
%% Module: Approval workflow engine, flow definition + instance (part 3 of 4, see erd-05b2 for StepStatus/Log/Reminder)

erDiagram
    direction LR

%%{init: {"theme": "base", "themeVariables": {"primaryColor": "#ffffff", "primaryBorderColor": "#000000", "primaryTextColor": "#000000", "lineColor": "#000000", "secondaryColor": "#ffffff", "tertiaryColor": "#ffffff"}, "er": {"diagramPadding": 8, "entityPadding": 12, "minEntityWidth": 90, "minEntityHeight": 40, "fontSize": 22}}}%%
    PmApprovalFlow {
        UUID id
        UUID business_id
        string flow_code
        string flow_name
        string document_type
        ApprovalMode approval_mode
        boolean is_active
        string description
        string created_by
        timestamp created_date
        string updated_by
        timestamp updated_date
        boolean is_delete
        string delete_by
        timestamp delete_date
    }

    PmApprovalFlowStep {
        UUID id
        UUID flow_id
        int step_order
        string step_name
        string approver_role
        string approver_user_id
        boolean is_required
        int timeout_days
        string timeout_action
        boolean can_skip
        string condition_expression
        string created_by
        timestamp created_date
        string updated_by
        timestamp updated_date
        boolean is_delete
        string delete_by
        timestamp delete_date
    }

    PmApproval {
        UUID id
        UUID business_id
        string document_type
        UUID document_id
        string document_code
        string document_title
        string version
        string requested_by
        string requested_by_name
        timestamp requested_date
        UUID flow_id
        UUID current_step_id
        ApprovalStatus status
        string final_approver
        timestamp final_approval_date
        string comment
        UUID attachment_id
        UUID reference_id
        boolean is_active
        json extra_data
        string created_by
        timestamp created_date
        string updated_by
        timestamp updated_date
        boolean is_delete
        string delete_by
        timestamp delete_date
    }

    PmApprovalFlow ||--o{ PmApprovalFlowStep : "defines"
    PmApprovalFlow ||--o{ PmApproval : "governs"
    PmApprovalFlowStep |o--o{ PmApproval : "current step of"

